--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
   "PORT": 8080,
   "SITE_TITLE": "Graf'hit",
-  "SITE_URL": "https://graphit.fr"
+  "SITE_URL": "https://graphit.fr",
+  "AIRPLAY_FOLDER": "./tests/"
 }
