--- a/config/config.json
+++ b/config/config.json
@@ -2,6 +2,8 @@
   "PORT": 8080,
   "SITE_TITLE": "Graf'hit",
   "SITE_URL": "https://graphit.fr",
+  "STREAM_URL": "http://213.246.53.78:8000/grafhit.mp3",
   "PODCAST_FOLDER": "./tests/",
+  "PODCAST_URL": "http://podcast.grafhit.net/",
   "AIRPLAY_FOLDER": "./tests/"
 }
