--- a/config/config.json
+++ b/config/config.json
@@ -5,5 +5,6 @@
   "STREAM_URL": "http://213.246.53.78:8000/grafhit.mp3",
   "PODCAST_FOLDER": "./tests/",
   "PODCAST_URL": "http://podcast.grafhit.net/",
-  "AIRPLAY_FOLDER": "./tests/"
+  "AIRPLAY_FOLDER": "./tests/",
+  "GMAPS_API_KEY": "AIzaSyDPPeWxV7INWCL3RYyzSTLwnIcbS9yuBjY"
 }
