--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
+    "mysql": "^2.10.2",
     "pug": "^2.0.0-alpha6"
   }
 }
