--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.15.1",
     "compression": "^1.6.2",
     "express": "^4.13.4",
+    "moment": "^2.13.0",
     "mysql": "^2.10.2",
     "pug": "^2.0.0-alpha7"
   }
