--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "homepage": "https://github.com/sd65/New-Graf-hit#readme",
   "dependencies": {
     "body-parser": "^1.15.1",
+    "chokidar": "^1.5.0",
     "compression": "^1.6.2",
     "express": "^4.13.4",
     "moment": "^2.13.0",
