--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
   "homepage": "https://github.com/sd65/New-Graf-hit#readme",
   "dependencies": {
     "body-parser": "^1.15.1",
+    "chokidar": "^1.5.0",
     "compression": "^1.6.2",
     "express": "^4.13.4",
     "moment": "^2.13.0",
     "mysql": "^2.10.2",
-    "pug": "^2.0.0-alpha7"
+    "node-schedule": "^1.1.0",
+    "pug": "^2.0.0-alpha7",
+    "socket.io": "^1.4.6",
+    "ws": "^1.1.0"
   }
 }
