--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chokidar": "^1.5.0",
     "compression": "^1.6.2",
     "express": "^4.13.4",
+    "marked": "^0.3.5",
     "moment": "^2.13.0",
     "mysql": "^2.10.2",
     "node-schedule": "^1.1.0",
